--- a/MC2-KisahKata/Cell/JudulCollectionViewCell.xib
+++ b/MC2-KisahKata/Cell/JudulCollectionViewCell.xib
@@ -10,34 +10,46 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="judulCell" id="gTV-IL-0wX" customClass="JudulCollectionViewCell" customModule="MC2_KisahKata" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="290" height="67"/>
+            <rect key="frame" x="0.0" y="0.0" width="330" height="67"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="290" height="67"/>
+                <rect key="frame" x="0.0" y="0.0" width="330" height="67"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLM-wd-qlt">
-                        <rect key="frame" x="6" y="23" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLM-wd-qlt">
+                        <rect key="frame" x="10" y="23" width="160" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="ZV7-6h-Hgd"/>
+                            <constraint firstAttribute="width" constant="160" id="g1x-uk-tbA"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wH-3F-64f">
-                        <rect key="frame" x="242" y="23" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star_3" translatesAutoresizingMaskIntoConstraints="NO" id="qEA-gu-0b5">
+                        <rect key="frame" x="188" y="18" width="132" height="31"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="31" id="G7h-nK-cwL"/>
+                            <constraint firstAttribute="width" constant="132" id="paM-Z9-X7L"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" red="0.25101926920000001" green="0.56500226259999997" blue="0.96867746109999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <constraints>
+                <constraint firstItem="RLM-wd-qlt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="23" id="AZa-Wr-T39"/>
+                <constraint firstItem="RLM-wd-qlt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="MBr-P1-RyI"/>
+                <constraint firstAttribute="bottom" secondItem="qEA-gu-0b5" secondAttribute="bottom" constant="18" id="eYH-gK-gLm"/>
+                <constraint firstAttribute="trailing" secondItem="qEA-gu-0b5" secondAttribute="trailing" constant="10" id="huF-Po-Zpi"/>
+            </constraints>
             <connections>
                 <outlet property="judulLabel" destination="RLM-wd-qlt" id="vvb-GF-XAu"/>
-                <outlet property="scoreLabel" destination="0wH-3F-64f" id="VZC-5U-USq"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="103.79464285714285"/>
+            <point key="canvasLocation" x="131.8840579710145" y="103.45982142857143"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="star_3" width="820" height="164"/>
+    </resources>
 </document>
